# vita-smb-client

./: .gitignore  CMakeLists.txt  README.md
lang/: Catalan.ini  Croatian.ini  Dutch.ini  English.ini  Euskera.ini  French.ini  Galego.ini  German.ini  Indonesian.ini  Italiano.ini  Japanese.ini  Korean.ini  Polish.ini  Portuguese_BR.ini  Russian.ini  Ryukyuan.ini  Simplified_Chinese.ini  Spanish.ini  Traditional_Chinese.ini
source/: actions.cpp  actions.h  config.cpp  config.h  fs.h  lang.cpp  lang.h  main.cpp  smbclient.cpp  textures.cpp  updater.cpp  updater.h  windows.cpp  windows.h
